--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
@@ -139,14 +139,15 @@ select[name="campaignId"] {
     display: none;
 }
 
-.pageHeader,
-.tabMenu{
+.pageHeader {
     position: sticky;
     top: var(--givewp-admin-bar-height);
     z-index: 2;
 }
 
 .tabMenu{
+    position: sticky;
+    z-index: 1;
     top: calc(var(--givewp-admin-bar-height) + var(--header-height));
 }
 
@@ -610,7 +611,7 @@ select[name="campaignId"] {
         display: flex;
         flex-direction: column;
         gap: var(--givewp-spacing-1);
-        z-index: 9999;
+        z-index: 3;
         padding: var(--givewp-spacing-1);
         top: 50px;
         width: 203px;
