--- a/src/Donors/resources/admin/components/DonorDetailsPage/DonorDetailsPage.module.scss
+++ b/src/Donors/resources/admin/components/DonorDetailsPage/DonorDetailsPage.module.scss
@@ -129,8 +129,77 @@
     line-height: 2.25rem;
 }
 
-select[name="campaignId"] {
-    display: none;
+.statusBadge {
+    align-items: center;
+    background-color: var(--statusBadgeBackgroundColor);
+    border-radius: var(--givewp-rounded-full);
+    border: 1px solid var(--statusBadgeBorderColor);
+    display: flex;
+    gap: var(--givewp-spacing-1);
+    justify-content: center;
+    padding: calc(var(--givewp-spacing-1) - 1px) var(--givewp-spacing-3) calc(var(--givewp-spacing-1) - 1px) calc(var(--givewp-spacing-1) - 1px);
+
+    &.statusBadge--current {
+        --statusBadgeBorderColor: var(--givewp-green-600);
+        --statusBadgeBackgroundColor: #f2fff3;
+        --statusBadgeTextColor: var(--givewp-green-900);
+    }
+
+    &.statusBadge--prospective {
+        --statusBadgeBorderColor: var(--givewp-orange-600);
+        --statusBadgeBackgroundColor: #D98715;
+        --statusBadgeTextColor: var(--givewp-orange-900);
+    }
+
+    &.statusBadge--retained {
+        --statusBadgeBorderColor: var(--givewp-esmerald-600);
+        --statusBadgeBackgroundColor: #15D92D;
+        --statusBadgeTextColor: var(--givewp-esmerald-900);
+    }
+
+    &.statusBadge--lapsed {
+        --statusBadgeBorderColor: var(--givewp-red-600);
+        --statusBadgeBackgroundColor: #D92D0B;
+        --statusBadgeTextColor: var(--givewp-red-900);
+    }
+
+    &.statusBadge--new {
+        --statusBadgeBorderColor: var(--givewp-purple-500);
+        --statusBadgeBackgroundColor: #2511A6;
+        --statusBadgeTextColor: var(--givewp-purple-900);
+    }
+
+    &.statusBadge--recaptured {
+        --statusBadgeBorderColor: var(--givewp-yellow-600);
+        --statusBadgeBackgroundColor: #A68C08;
+        --statusBadgeTextColor: var(--givewp-yellow-900);
+    }
+
+    &.statusBadge--recurring {
+        --statusBadgeBorderColor: var(--givewp-blue-600);
+        --statusBadgeBackgroundColor: #0857A6;
+        --statusBadgeTextColor: var(--givewp-blue-900);
+    }
+}
+
+.statusBadgeIcon {
+    font-size: 0.75rem;
+    font-weight: 600;
+    text-align: center;
+    color: #f2fff3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1.125rem;
+    height: 1.125rem;
+    border-radius: 50%;
+    background-color: var(--statusBadgeBorderColor);
+}
+
+.statusBadgeText {
+    font-size: 0.75rem;
+    font-weight: 600;
+    color: var(--statusBadgeTextColor);
 }
 
 .tabs {
